After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 734472 - Don't stop "red" error marking after first error
Don't stop "red" error marking after first error
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-08-08 10:12 UTC by Bastien Nocera
Modified: 2014-08-13 16:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
network: Fix compile-time warning (790 bytes, patch)
2014-08-13 11:48 UTC, Bastien Nocera
committed Details | Review
network: Don't stop validating when we get an error (26.08 KB, patch)
2014-08-13 11:48 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-08-08 10:12:57 UTC
In commit 62db29b3876b4a594fc2a0af7d553dbbf30424d6 (bug 734446), we mark entries with errors in red. Except that we stop after the first error in the page. We should carry on validating other settings instead.
Comment 1 Bastien Nocera 2014-08-13 11:48:42 UTC
Created attachment 283275 [details] [review]
network: Fix compile-time warning

Missing include.
Comment 2 Bastien Nocera 2014-08-13 11:48:48 UTC
Created attachment 283276 [details] [review]
network: Don't stop validating when we get an error

The previous code would stop validating when an error occurred which
meant that when a page contained multiple errors, only the first one(s)
to be checked would appear in red.

Now, all the errors will appear in red.
Comment 3 Debarshi Ray 2014-08-13 14:37:02 UTC
Review of attachment 283275 [details] [review]:

Looks good to me.
Comment 4 Debarshi Ray 2014-08-13 15:03:14 UTC
Review of attachment 283276 [details] [review]:

There is something wrong with IPv4 netmask and metric. If I type something obviously wrong (like '####'), the field above becomes red but not the field with the garbage values.
Comment 5 Debarshi Ray 2014-08-13 15:36:00 UTC
Review of attachment 283276 [details] [review]:

After talking to Bastien in #control-center on GIMPNet, this is caused by strtoul and strtol accepting garbage. Not a regression and we can address that in a separate bug.

Otherwise looks OK to me.
Comment 6 Bastien Nocera 2014-08-13 16:40:18 UTC
Attachment 283275 [details] pushed as 117cf30 - network: Fix compile-time warning
Attachment 283276 [details] pushed as d9d5124 - network: Don't stop validating when we get an error