network: Fix compile-time warning

Missing include.

https://bugzilla.gnome.org/show_bug.cgi?id=734472